# FixturesPackGenerator

./: .gitignore  LICENSE  Readme.md  pyproject.toml  setup.cfg
fpgen/: abstract_fixture_loader.py  command.py  loader.py
fpgen/command/: fixtures.py
fpgen/example/: database.py
fpgen/example/config/: fixtures_v1.yaml
fpgen/example/fixtures/catalog/v1/: unit_list.json
fpgen/example/fixtures/v1/: load_category.py  load_goods.py  load_unit.py
fpgen/example/models/: base.py
fpgen/example/models/goods/: __init__.py  category.py  product.py  unit.py
fpgen/handler/fixtures/: loader.py
fpgen/orm/: abstract_database.py  abstract_fixtures_loader.py
fpgen/orm/sqlalchemy/: database.py  sqla_database.py  sqla_fixtures_loader.py
