[metadata]
name = fpgen
version = 0.1.0
author = Phill Zotov
author_email = phill.zotov@gmail.com
description = Generating fake data for models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True